--- a/WebContent/timeout.html
+++ b/WebContent/timeout.html
@@ -86,16 +86,16 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="images/PHYSICS_equation_mathematics_math_formula_poster_science_text_typography_1366x768.jpg" alt="First slide">
+          <img class="first-slide" src="images/stand_expo.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Sistema de Administraci&oacute;n Escolar</h1>
-              <p>Bienvenido al Sistema de Administraci&oacute;n Escolar</p>
+              <h1>Sistema de Administraci&oacute;n Pastelera</h1>
+              <p>Bienvenido al Sistema de Administraci&oacute;n Pastelera</p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="images/computer_engineering_science_tech2_1366x768.jpg" alt="Second slide">
+          <img class="second-slide" src="images/cupcakes.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Inovaci&oacute;n</h1>
@@ -105,7 +105,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="images/computer_engineering_science_tech_1366x768.jpg" alt="Third slide">
+          <img class="third-slide" src="images/granja.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>C&oacute;digo</h1>
